{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 46,
  "lineage": "198c9daf-ab47-0f55-d83c-e11151aa3abe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "tfer--vpc-0d005e84f2bb96266",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8bac18e1791d0cc",
            "route_table_id": "rtb-0f37da50152e19728",
            "timeouts": {
            },
            "vpc_id": "vpc-0d005e84f2bb96266"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tfer--rtb-0f37da50152e19728",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:route-table/rtb-0f37da50152e19728",
            "id": "rtb-0f37da50152e19728",
            "owner_id": "956675039632",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b8beba6e51bc121",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-0d005e84f2bb96266"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-sg-eks-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:security-group/sg-06a9ea2b033698d10",
            "description": "security_group for test-eks-cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress security_group_rule for test-eks-cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a9ea2b033698d10",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress security_group_rule for test-eks-cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "test-sg-eks-cluster",
            "name_prefix": "",
            "owner_id": "956675039632",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg-eks-cluster"
            },
            "tags_all": {
              "Name": "test-sg-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d005e84f2bb96266"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-sg-eks-cluster-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "egress security_group_rule for test-eks-cluster",
            "from_port": 0,
            "id": "sgrule-1265902988",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06a9ea2b033698d10",
            "security_group_rule_id": "sgr-0f5f3005476c3f084",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.test-sg-eks-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-sg-eks-cluster-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ingress security_group_rule for test-eks-cluster",
            "from_port": 0,
            "id": "sgrule-1715968122",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06a9ea2b033698d10",
            "security_group_rule_id": "sgr-0f5f3005476c3f084",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.test-sg-eks-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tfer--vpc-0d005e84f2bb96266",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:vpc/vpc-0d005e84f2bb96266",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0e7ed46b912e664dd",
            "default_route_table_id": "rtb-0f37da50152e19728",
            "default_security_group_id": "sg-012c9c369c2eb8f25",
            "dhcp_options_id": "dopt-0938f5c03436a3ca6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d005e84f2bb96266",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f37da50152e19728",
            "owner_id": "956675039632"
          }
        }
      ]
    }
  ]
}